--- a/templates/block.tmpl
+++ b/templates/block.tmpl
@@ -1,6 +1,1 @@
-🎉 *{{ convertAction .Pool.Coin }}* [#{{ .Block.Number }}]({{ formatBlockURL .Pool.Coin .Block.Hash }}) _
-{{- if (eq .Pool.Coin "xch") -}}
-        {{ printf "%.2f" (convertCurrency .Pool.Coin .Block.Reward) }}
-    {{- else -}}
-        {{ printf "%.6f" (convertCurrency .Pool.Coin .Block.Reward) }}
-    {{- end }} {{ upper .Pool.Coin }}_
+🎉 *{{ convertAction .Pool.Coin }}* [#{{ .Block.Number }}]({{ formatBlockURL .Pool.Coin .Block.Hash }}) _{{ printf "%.6f" (convertCurrency .Pool.Coin .Block.Reward) }} {{ upper .Pool.Coin }}_
